# scraperX

./: .claudeignore  .env.example  .gitignore  DESIGN.md  README.md  build.sh  cli_entry.py  gui_entry.py  pyproject.toml  requirements.txt
scraperx/: __init__.py  cli.py  config.py  engine.py  exporter.py  gui.py  logconf.py  rotators.py
tests/: test_units.py
